Fix failing pip and failing service configuration template.

--- a/templates/docker.service.j2
+++ b/templates/docker.service.j2
@@ -10,6 +10,8 @@ Type=notify
 # the default is not to use systemd for cgroups because the delegate issues still
 # exists and systemd currently does not support the cgroup feature set required
 # for containers run by docker
+#
+# disabled iptables!!
 ExecStart=/usr/bin/dockerd -H fd:// --iptables=false
 ExecReload=/bin/kill -s HUP $MAINPID
 LimitNOFILE=1048576
